Single placeholder image

--- a/Jupyter/webRegistration.ipynb
+++ b/Jupyter/webRegistration.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f4a2fa797eeb4f218ffe38f7e81b7e26",
+       "model_id": "4fa5f14688cc4ccb891cf17a1007abc6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -22,7 +22,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9f8de1136be24bebbad0d07df07400ea",
+       "model_id": "67acdd0c561747ff894dae0e605877af",
        "version_major": 2,
        "version_minor": 0
       },
@@ -36,7 +36,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ef347f7b01ac44188787b0616a4cd879",
+       "model_id": "05572f21999c428e8315217353fa34b5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -56,45 +56,42 @@
     "from ipywidgets import Button, Label, HBox, VBox\n",
     "import os\n",
     "\n",
-    "appState={'fixed':None, 'moving':None}\n",
     "\n",
     "# for use in viewers, from\n",
     "# https://itk.org/ITKExamples/src/Core/Common/CreateAnImage/Documentation.html\n",
-    "def placeholderImage():\n",
-    "    Dimension = 3\n",
-    "    PixelType = itk.ctype('unsigned char')\n",
-    "    ImageType = itk.Image[PixelType, Dimension]\n",
-    "    \n",
-    "    image = ImageType.New()\n",
-    "    \n",
-    "    ind = itk.Index[Dimension]()\n",
-    "    ind[0] = 0  # first index on X\n",
-    "    ind[1] = 0  # first index on Y\n",
-    "    ind[2] = 0  # first index on Z\n",
-    "    \n",
-    "    size1 = 4\n",
-    "    size = itk.Size[Dimension]()\n",
-    "    size[0] = size1  # size along X\n",
-    "    size[1] = size1  # size along Y\n",
-    "    size[2] = size1  # size along Z\n",
-    "    \n",
-    "    region = itk.ImageRegion[Dimension]()\n",
-    "    region.SetSize(size)\n",
-    "    region.SetIndex(ind)\n",
-    "    \n",
-    "    image.SetRegions(region)\n",
-    "    image.Allocate()\n",
-    "    \n",
-    "    # set voxel values\n",
-    "    for k in range(size1):\n",
-    "        ind[2]=k\n",
-    "        for j in range(size1):\n",
-    "            ind[1]=j\n",
-    "            for i in range(size1):\n",
-    "                ind[0]=i\n",
-    "                image.SetPixel(ind, i+2*j+k*k)\n",
-    "    \n",
-    "    return image\n",
+    "Dimension = 3\n",
+    "PixelType = itk.ctype('unsigned char')\n",
+    "ImageType = itk.Image[PixelType, Dimension]\n",
+    "\n",
+    "placeholderImage = ImageType.New()\n",
+    "\n",
+    "ind = itk.Index[Dimension]()\n",
+    "ind[0] = 0  # first index on X\n",
+    "ind[1] = 0  # first index on Y\n",
+    "ind[2] = 0  # first index on Z\n",
+    "\n",
+    "size1 = 4\n",
+    "size = itk.Size[Dimension]()\n",
+    "size[0] = size1  # size along X\n",
+    "size[1] = size1  # size along Y\n",
+    "size[2] = size1  # size along Z\n",
+    "\n",
+    "region = itk.ImageRegion[Dimension]()\n",
+    "region.SetSize(size)\n",
+    "region.SetIndex(ind)\n",
+    "\n",
+    "placeholderImage.SetRegions(region)\n",
+    "placeholderImage.Allocate()\n",
+    "\n",
+    "# set voxel values\n",
+    "for k in range(size1):\n",
+    "    ind[2]=k\n",
+    "    for j in range(size1):\n",
+    "        ind[1]=j\n",
+    "        for i in range(size1):\n",
+    "            ind[0]=i\n",
+    "            placeholderImage.SetPixel(ind, i+2*j+k*k)\n",
+    "\n",
     "\n",
     "\n",
     "def linkViews(viewer1, viewer2):\n",
@@ -133,9 +130,9 @@
     "\n",
     "# create viewers which we will link to have the same view etc\n",
     "# to change images as needed, they need to have an initial image\n",
-    "fixedViewer = Viewer(image=placeholderImage())\n",
-    "movingViewer = Viewer(image=placeholderImage())\n",
-    "resultViewer = Viewer(image=placeholderImage())\n",
+    "fixedViewer = Viewer(image=placeholderImage)\n",
+    "movingViewer = Viewer(image=placeholderImage)\n",
+    "resultViewer = Viewer(image=placeholderImage)\n",
     "linkViews(fixedViewer, movingViewer)\n",
     "linkViews(fixedViewer, resultViewer)\n",
     "\n",
@@ -145,9 +142,8 @@
     "imageViews = HBox([vboxFixed, vboxMoving, vboxResult])\n",
     "display(imageViews)\n",
     "\n",
-    "\n",
     "out = ipywidgets.Output()\n",
-    "display(out)\n",
+    "display(out) # for status messages\n",
     "\n",
     "viewButton = ipywidgets.Button(description=\"Load and view\")\n",
     "regType=ipywidgets.RadioButtons(\n",
@@ -159,6 +155,9 @@
     "registerButton = ipywidgets.Button(description=\"Register and view\")\n",
     "buttons = HBox([viewButton, regType, registerButton])\n",
     "display(buttons)\n",
+    "\n",
+    "appState={'fixed':placeholderImage, 'moving':placeholderImage}\n",
+    "\n",
     "\n",
     "\n",
     "def viewImages(b):\n",
@@ -224,6 +223,13 @@
     "\n",
     "registerButton.on_click(registerImages)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
