Loading on selection works well
Preparing for downloading result

--- a/Jupyter/webRegistration.ipynb
+++ b/Jupyter/webRegistration.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4fa5f14688cc4ccb891cf17a1007abc6",
+       "model_id": "49270ab41ff140efb4d78ec4b22c0a60",
        "version_major": 2,
        "version_minor": 0
       },
@@ -22,7 +22,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "67acdd0c561747ff894dae0e605877af",
+       "model_id": "97be200d83264c0399fccd63811ce536",
        "version_major": 2,
        "version_minor": 0
       },
@@ -36,12 +36,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "05572f21999c428e8315217353fa34b5",
+       "model_id": "a1e1f8b40d584f62934eb080f76d712d",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(Button(description='Load and view', style=ButtonStyle()), RadioButtons(description='Type:', opt…"
+       "HBox(children=(RadioButtons(description='Type:', options=('rigid', 'affine', 'bspline'), value='rigid'), Butto…"
       ]
      },
      "metadata": {},
@@ -60,7 +60,7 @@
     "# for use in viewers, from\n",
     "# https://itk.org/ITKExamples/src/Core/Common/CreateAnImage/Documentation.html\n",
     "Dimension = 3\n",
-    "PixelType = itk.ctype('unsigned char')\n",
+    "PixelType = itk.ctype('float')\n",
     "ImageType = itk.Image[PixelType, Dimension]\n",
     "\n",
     "placeholderImage = ImageType.New()\n",
@@ -145,27 +145,36 @@
     "out = ipywidgets.Output()\n",
     "display(out) # for status messages\n",
     "\n",
-    "viewButton = ipywidgets.Button(description=\"Load and view\")\n",
     "regType=ipywidgets.RadioButtons(\n",
     "    options=['rigid', 'affine', 'bspline'],\n",
     "    value='rigid', # Defaults to 'pineapple'\n",
     "    description='Type:',\n",
     "    disabled=False\n",
     ")\n",
-    "registerButton = ipywidgets.Button(description=\"Register and view\")\n",
-    "buttons = HBox([viewButton, regType, registerButton])\n",
+    "registerButton = ipywidgets.Button(description=\"Register\")\n",
+    "buttons = HBox([regType, registerButton])\n",
     "display(buttons)\n",
     "\n",
-    "appState={'fixed':placeholderImage, 'moving':placeholderImage}\n",
+    "appState={'fixed':placeholderImage, 'moving':placeholderImage, 'result':None}\n",
     "\n",
     "\n",
-    "\n",
-    "def viewImages(b):\n",
-    "    appState['fixed'] = readUploadedImage(fixedUploader)\n",
-    "    appState['moving'] = readUploadedImage(movingUploader)\n",
+    "def uploadedImage(b):\n",
+    "    uploader=b['owner']\n",
+    "    if (uploader is fixedUploader):\n",
+    "        appState['fixed'] = readUploadedImage(fixedUploader)\n",
+    "        fixedViewer.image=appState['fixed']\n",
+    "        if (appState['moving'] is placeholderImage):\n",
+    "            # make them close in physical space\n",
+    "            appState['moving'].SetOrigin(appState['fixed'].GetOrigin())\n",
+    "            movingViewer.image=appState['moving']\n",
+    "    else:\n",
+    "        appState['moving'] = readUploadedImage(movingUploader)\n",
+    "        movingViewer.image=appState['moving']\n",
+    "        if (appState['fixed'] is placeholderImage):\n",
+    "            # make them close in physical space\n",
+    "            appState['fixed'].SetOrigin(appState['moving'].GetOrigin())\n",
+    "            fixedViewer.image=appState['fixed']\n",
     "    \n",
-    "    fixedViewer.image=appState['fixed']\n",
-    "    movingViewer.image=appState['moving']\n",
     "    resultViewer=checkerboard(appState['fixed'], appState['moving'])\n",
     "    linkViews(fixedViewer, resultViewer.children[0])\n",
     "    \n",
@@ -173,15 +182,14 @@
     "    vboxResult.children=(Label('Fixed/moving'),\n",
     "                        Label('checkerboard'),\n",
     "                        resultViewer)\n",
-    "    \n",
     "    imageViews.children=(vboxFixed,\n",
     "                        vboxMoving,\n",
     "                        vboxResult)\n",
-    "    \n",
     "    out.clear_output(wait=True)\n",
     "\n",
+    "fixedUploader.observe(uploadedImage, names='value')\n",
+    "movingUploader.observe(uploadedImage, names='value')\n",
     "\n",
-    "viewButton.on_click(viewImages)\n",
     "\n",
     "def registerImages(b):\n",
     "    out.clear_output(wait=True)\n",
@@ -205,8 +213,11 @@
     "    with out:\n",
     "        print('Executing '+regType.value+' registration. Please wait...')\n",
     "    \n",
-    "    registered_moving = itk.elastix_registration_method(appState['fixed'], appState['moving'], parameter_object=parameters)\n",
-    "    resultViewer=checkerboard(appState['fixed'], registered_moving)\n",
+    "    appState['result'] = itk.elastix_registration_method(appState['fixed'],\n",
+    "                                                        appState['moving'],\n",
+    "                                                        parameter_object=parameters)\n",
+    "    \n",
+    "    resultViewer=checkerboard(appState['fixed'], appState['result'])\n",
     "    linkViews(fixedViewer, resultViewer.children[0])\n",
     "    \n",
     "    vboxResult=imageViews.children[2]\n",
