Download does not work properly "Failed - Forbidden"

--- a/Jupyter/webRegistration.ipynb
+++ b/Jupyter/webRegistration.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "49270ab41ff140efb4d78ec4b22c0a60",
+       "model_id": "975887401dd44492bb9bfde17ace13e6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -22,7 +22,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "97be200d83264c0399fccd63811ce536",
+       "model_id": "a404c93f56e54f1793fb96abfe47122b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -36,7 +36,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a1e1f8b40d584f62934eb080f76d712d",
+       "model_id": "b087416edd69454fbc0dfc62e98ba4cf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -93,8 +93,8 @@
     "            placeholderImage.SetPixel(ind, i+2*j+k*k)\n",
     "\n",
     "\n",
-    "\n",
-    "def linkViews(viewer1, viewer2):\n",
+    "# from https://github.com/InsightSoftwareConsortium/itkwidgets/blob/cffd4583775af2d3fa2aaac67e34fc21b3a790b5/itkwidgets/widget_compare.py#L26-L34\n",
+    "def linkViewers(viewer1, viewer2):\n",
     "    ipywidgets.jslink((viewer1, 'mode'), (viewer2, 'mode'))\n",
     "    ipywidgets.jslink((viewer1, 'camera'), (viewer2, 'camera'))\n",
     "    ipywidgets.jslink((viewer1, 'roi'), (viewer2, 'roi'))\n",
@@ -130,11 +130,11 @@
     "\n",
     "# create viewers which we will link to have the same view etc\n",
     "# to change images as needed, they need to have an initial image\n",
-    "fixedViewer = Viewer(image=placeholderImage)\n",
-    "movingViewer = Viewer(image=placeholderImage)\n",
-    "resultViewer = Viewer(image=placeholderImage)\n",
-    "linkViews(fixedViewer, movingViewer)\n",
-    "linkViews(fixedViewer, resultViewer)\n",
+    "fixedViewer = Viewer(image=placeholderImage, ui_collapsed=True)\n",
+    "movingViewer = Viewer(image=placeholderImage, ui_collapsed=True)\n",
+    "resultViewer = Viewer(image=placeholderImage, ui_collapsed=True)\n",
+    "linkViewers(fixedViewer, movingViewer)\n",
+    "linkViewers(fixedViewer, resultViewer)\n",
     "\n",
     "vboxFixed = VBox([Label('Fixed image'), fixedUploader, fixedViewer])\n",
     "vboxMoving = VBox([Label('Moving image'), movingUploader, movingViewer])\n",
@@ -147,12 +147,15 @@
     "\n",
     "regType=ipywidgets.RadioButtons(\n",
     "    options=['rigid', 'affine', 'bspline'],\n",
-    "    value='rigid', # Defaults to 'pineapple'\n",
+    "    value='rigid',\n",
     "    description='Type:',\n",
     "    disabled=False\n",
     ")\n",
     "registerButton = ipywidgets.Button(description=\"Register\")\n",
-    "buttons = HBox([regType, registerButton])\n",
+    "downloadLink = ipywidgets.HTML(\"\"\"<a download='MovingRegistered.nrrd'\n",
+    "    href='result.nrrd'>MovingRegistered</a>\"\"\")\n",
+    "downloadLink.layout.visibility = 'hidden'\n",
+    "buttons = HBox([regType, registerButton, downloadLink])\n",
     "display(buttons)\n",
     "\n",
     "appState={'fixed':placeholderImage, 'moving':placeholderImage, 'result':None}\n",
@@ -176,7 +179,7 @@
     "            fixedViewer.image=appState['fixed']\n",
     "    \n",
     "    resultViewer=checkerboard(appState['fixed'], appState['moving'])\n",
-    "    linkViews(fixedViewer, resultViewer.children[0])\n",
+    "    linkViewers(fixedViewer, resultViewer.children[0])\n",
     "    \n",
     "    vboxResult=imageViews.children[2]\n",
     "    vboxResult.children=(Label('Fixed/moving'),\n",
@@ -216,9 +219,10 @@
     "    appState['result'] = itk.elastix_registration_method(appState['fixed'],\n",
     "                                                        appState['moving'],\n",
     "                                                        parameter_object=parameters)\n",
+    "    itk.imwrite(appState['result'], \"./result.nrrd\")\n",
     "    \n",
     "    resultViewer=checkerboard(appState['fixed'], appState['result'])\n",
-    "    linkViews(fixedViewer, resultViewer.children[0])\n",
+    "    linkViewers(fixedViewer, resultViewer.children[0])\n",
     "    \n",
     "    vboxResult=imageViews.children[2]\n",
     "    vboxResult.children=(Label('Fixed/registered'),\n",
@@ -228,8 +232,9 @@
     "    imageViews.children=(imageViews.children[0],\n",
     "                        imageViews.children[1],\n",
     "                        vboxResult)\n",
-    "    \n",
-    "    # display(checkerboard(appState['fixed'], registered_moving))\n",
+    "\n",
+    "    downloadLink.layout.visibility = 'visible'\n",
+    "\n",
     "    out.clear_output()\n",
     "\n",
     "registerButton.on_click(registerImages)"
