--- a/Jupyter/webRegistration.ipynb
+++ b/Jupyter/webRegistration.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "975887401dd44492bb9bfde17ace13e6",
+       "model_id": "1aa27ba5cbeb4e569339da8f29e91317",
        "version_major": 2,
        "version_minor": 0
       },
@@ -22,7 +22,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a404c93f56e54f1793fb96abfe47122b",
+       "model_id": "4e41335a801b46d689c9b9b83ca09821",
        "version_major": 2,
        "version_minor": 0
       },
@@ -36,7 +36,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b087416edd69454fbc0dfc62e98ba4cf",
+       "model_id": "715a94207992451b9147461fe96c1241",
        "version_major": 2,
        "version_minor": 0
       },
@@ -55,6 +55,7 @@
     "import ipywidgets\n",
     "from ipywidgets import Button, Label, HBox, VBox\n",
     "import os\n",
+    "import base64\n",
     "\n",
     "\n",
     "# for use in viewers, from\n",
@@ -152,10 +153,7 @@
     "    disabled=False\n",
     ")\n",
     "registerButton = ipywidgets.Button(description=\"Register\")\n",
-    "downloadLink = ipywidgets.HTML(\"\"\"<a download='MovingRegistered.nrrd'\n",
-    "    href='result.nrrd'>MovingRegistered</a>\"\"\")\n",
-    "downloadLink.layout.visibility = 'hidden'\n",
-    "buttons = HBox([regType, registerButton, downloadLink])\n",
+    "buttons = HBox([regType, registerButton])\n",
     "display(buttons)\n",
     "\n",
     "appState={'fixed':placeholderImage, 'moving':placeholderImage, 'result':None}\n",
@@ -232,8 +230,20 @@
     "    imageViews.children=(imageViews.children[0],\n",
     "                        imageViews.children[1],\n",
     "                        vboxResult)\n",
-    "\n",
-    "    downloadLink.layout.visibility = 'visible'\n",
+    "    \n",
+    "    # create a button which will contain base64-encoded file content\n",
+    "    # that way server permission don't matter for downloading\n",
+    "    with open(\"./result.nrrd\", mode='rb') as file:\n",
+    "        fileContent = file.read()    \n",
+    "    fileContent64 = base64.b64encode(fileContent)\n",
+    "    html = '''<a download=\"MovingRegistered.nrrd\"\n",
+    "        href=\"data:image/nrrd;base64,{payload}\"\n",
+    "        target=\"_blank\">MovingRegistered</a>'''\n",
+    "    html = html.format(payload=fileContent64.decode())\n",
+    "    downloadLink=ipywidgets.HTML(html)\n",
+    "    buttons.children=(buttons.children[0],\n",
+    "                     buttons.children[1],\n",
+    "                     downloadLink)\n",
     "\n",
     "    out.clear_output()\n",
     "\n",
