Image compression does not work from Python

--- a/Jupyter/webRegistration.ipynb
+++ b/Jupyter/webRegistration.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1aa27ba5cbeb4e569339da8f29e91317",
+       "model_id": "5587753d014b47b0bb1db0fe75bd424f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -22,7 +22,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4e41335a801b46d689c9b9b83ca09821",
+       "model_id": "0c01a51b8e184856b3dc6e5a97c400c0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -36,7 +36,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "715a94207992451b9147461fe96c1241",
+       "model_id": "d77935ec28324bb2b0366cb9e0902bd0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -217,6 +217,10 @@
     "    appState['result'] = itk.elastix_registration_method(appState['fixed'],\n",
     "                                                        appState['moving'],\n",
     "                                                        parameter_object=parameters)\n",
+    "    \n",
+    "    #with out:\n",
+    "    #    print('Writing result image with compression...')\n",
+    "    #itk.imwrite(appState['result'], \"./result.nrrd\", UseCompression=True)\n",
     "    itk.imwrite(appState['result'], \"./result.nrrd\")\n",
     "    \n",
     "    resultViewer=checkerboard(appState['fixed'], appState['result'])\n",
