Enabling compression of registered moving image

--- a/Jupyter/webRegistration.ipynb
+++ b/Jupyter/webRegistration.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5587753d014b47b0bb1db0fe75bd424f",
+       "model_id": "ed4a2d98830f4e47bbffd62a1b5e44f6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -22,7 +22,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0c01a51b8e184856b3dc6e5a97c400c0",
+       "model_id": "2a12f514c1094c3aa8dbfc196c5b048a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -36,7 +36,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d77935ec28324bb2b0366cb9e0902bd0",
+       "model_id": "0335f377d49a4f22bb81e8c42d6938b7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -218,10 +218,9 @@
     "                                                        appState['moving'],\n",
     "                                                        parameter_object=parameters)\n",
     "    \n",
-    "    #with out:\n",
-    "    #    print('Writing result image with compression...')\n",
-    "    #itk.imwrite(appState['result'], \"./result.nrrd\", UseCompression=True)\n",
-    "    itk.imwrite(appState['result'], \"./result.nrrd\")\n",
+    "    with out:\n",
+    "        print('Compressing result image...')\n",
+    "    itk.imwrite(appState['result'], \"./result.nrrd\", compression=True)\n",
     "    \n",
     "    resultViewer=checkerboard(appState['fixed'], appState['result'])\n",
     "    linkViewers(fixedViewer, resultViewer.children[0])\n",
@@ -253,13 +252,6 @@
     "\n",
     "registerButton.on_click(registerImages)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
