ENH: Notebook bone segmentation

--- a/examples/MouseFemurMicroCT.ipynb
+++ b/examples/MouseFemurMicroCT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
@@ -47,7 +47,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d26d42a440bf405286b7bb752a11bad4",
+       "model_id": "58d9c72c08c447379ccbf576fb0a23a0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -64,6 +64,11 @@
     "camera = np.array([[-7.028664  , 20.177433  , 45.209637  ],\n",
     "       [ 4.8549995 ,  9.24      , 48.065998  ],\n",
     "       [-0.17604062,  0.06524051,  0.9822186 ]], dtype=np.float32)\n",
+    "opacity_gaussians = [[{'position': 0.3,\n",
+    "   'height': 0.7545454545454545,\n",
+    "   'width': 0.2194444444444444,\n",
+    "   'xBias': 0.03777777777777777,\n",
+    "   'yBias': 0}]]\n",
     "viewer = view(image,\n",
     "     cmap='bone_Matlab',\n",
     "     gradient_opacity=1.0,\n",
@@ -71,55 +76,40 @@
     "     ui_collapsed=True,\n",
     "     units='mm',\n",
     "     camera=camera,\n",
+    "     opacity_gaussians=opacity_gaussians\n",
     "    )\n",
     "viewer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-7.028664  , 20.177433  , 45.209637  ],\n",
-       "       [ 4.8549995 ,  9.24      , 48.065998  ],\n",
-       "       [-0.17604062,  0.06524051,  0.9822186 ]], dtype=float32)"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "viewer.camera"
+    "cortical_thickness=0.1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "411db0fafaa245caadfb387051efa7c1",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Viewer(cmap=['bone_Matlab'], geometries=[], gradient_opacity=0.22, point_sets=[], rendered_image=<itk.itkImage…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "itkPointSetD3 not loaded from module ITKRegistrationCommon because of exception:\n",
+      " module 'itk.ITKRegistrationCommonPython' has no attribute 'itkPointSetD3'\n",
+      "Template itk::LandmarkAtlasSegmentationFilter<itk::Image<signedshort,3>,itk::Image<signedshort,3>>\n",
+      " already defined as <class 'itk.itkLandmarkAtlasSegmentationFilterPython.itkLandmarkAtlasSegmentationFilterISS3ISS3'>\n",
+      " is redefined as <class 'itk.itkLandmarkAtlasSegmentationFilterPython.itkLandmarkAtlasSegmentationFilterISS3ISS3'>\n",
+      "Warning: template already defined 'itk::LandmarkAtlasSegmentationFilter<itk::Image<signedshort,3>,itk::Image<signedshort,3>>'\n"
+     ]
     }
    ],
    "source": [
-    "view(denoised,\n",
-    "     cmap='bone_Matlab')"
+    "bone_segmenter = itk.SegmentBonesInMicroCTFilter.New(image)"
    ]
   },
   {
@@ -146,7 +136,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
