ENH: Notebook bone segmentation

--- a/examples/MouseFemurMicroCT.ipynb
+++ b/examples/MouseFemurMicroCT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,12 +12,13 @@
     "import itk\n",
     "import numpy as np\n",
     "\n",
-    "from itkwidgets import view"
+    "from itkwidgets import view\n",
+    "from ipywidgets import FloatProgress, Label, HBox"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 36,
    "metadata": {
     "scrolled": true
    },
@@ -47,13 +48,13 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "58d9c72c08c447379ccbf576fb0a23a0",
+       "model_id": "aeb68977517448bba834b112831781d7",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Viewer(background=(0.4, 0.4, 0.4), camera=array([[-7.028664  , 20.177433  , 45.209637  ],\n",
-       "       [ 4.8549995 ,…"
+       "Viewer(background=(0.6, 0.6, 0.6), camera=array([[-2.4597874 , 19.208582  , 45.884567  ],\n",
+       "       [ 4.855     ,…"
       ]
      },
      "metadata": {},
@@ -64,17 +65,24 @@
     "camera = np.array([[-7.028664  , 20.177433  , 45.209637  ],\n",
     "       [ 4.8549995 ,  9.24      , 48.065998  ],\n",
     "       [-0.17604062,  0.06524051,  0.9822186 ]], dtype=np.float32)\n",
+    "camera = np.array([[-2.4597874 , 19.208582  , 45.884567  ],\n",
+    "       [ 4.855     ,  9.24      , 48.065998  ],\n",
+    "       [-0.22125234,  0.05076638,  0.97389436]], dtype=np.float32)\n",
     "opacity_gaussians = [[{'position': 0.3,\n",
     "   'height': 0.7545454545454545,\n",
     "   'width': 0.2194444444444444,\n",
     "   'xBias': 0.03777777777777777,\n",
     "   'yBias': 0}]]\n",
+    "opacity_gaussians = [[{'position': 0.23888888888888893,\n",
+    "   'height': 0.3090909090909091,\n",
+    "   'width': 0.1722222222222221,\n",
+    "   'xBias': 0.04708953460902432,\n",
+    "   'yBias': 0}]]\n",
     "viewer = view(image,\n",
     "     cmap='bone_Matlab',\n",
     "     gradient_opacity=1.0,\n",
-    "     background=(0.4,0.4,0.4),\n",
+    "     background=(0.6,0.6,0.6),\n",
     "     ui_collapsed=True,\n",
-    "     units='mm',\n",
     "     camera=camera,\n",
     "     opacity_gaussians=opacity_gaussians\n",
     "    )\n",
@@ -83,16 +91,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8ebba0209cc84f1ba1366b29e27fa38f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Label(value='Segment bones'), FloatProgress(value=0.0, bar_style='info', description='progress:…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "cortical_thickness=0.1"
+    "label = Label('Segment bones')\n",
+    "progress = FloatProgress(value=0.0,\n",
+    "                         min=0.0,\n",
+    "                         max=1.0,\n",
+    "                         step=0.001,\n",
+    "                         description='progress:',\n",
+    "                         bar_style='info')\n",
+    "progress\n",
+    "box = HBox([label, progress])\n",
+    "box"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +141,73 @@
     }
    ],
    "source": [
-    "bone_segmenter = itk.SegmentBonesInMicroCTFilter.New(image)"
+    "bone_segmenter = itk.SegmentBonesInMicroCTFilter.New(image)\n",
+    "cortical_thickness=0.1\n",
+    "bone_segmenter.SetCorticalBoneThickness(cortical_thickness)\n",
+    "\n",
+    "def update_progress():\n",
+    "    progress.value = bone_segmenter.GetProgress()\n",
+    "bone_segmenter.AddObserver(itk.ProgressEvent(), update_progress)\n",
+    "\n",
+    "bone_segmenter.Update()\n",
+    "\n",
+    "progress.bar_style = 'success'\n",
+    "progress.description = 'done.'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "34c54dabc39c458cba467be6d4b53b04",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Viewer(background=(0.6, 0.6, 0.6), camera=array([[-2.4597874 , 19.208582  , 45.884567  ],\n",
+       "       [ 4.855     ,…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "label_image = bone_segmenter.GetOutput()\n",
+    "view(image=image,\n",
+    "     label_image=label_image,\n",
+    "     opacity_gaussians=opacity_gaussians,\n",
+    "     gradient_opacity=1.0,\n",
+    "     background=(0.6,0.6,0.6),\n",
+    "     camera=camera,\n",
+    "     ui_collapsed=True,\n",
+    "     )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-2.4597874 , 19.208582  , 45.884567  ],\n",
+       "       [ 4.855     ,  9.24      , 48.065998  ],\n",
+       "       [-0.22125234,  0.05076638,  0.97389436]], dtype=float32)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "viewer.camera"
    ]
   },
   {
