--- a/examples/MouseFemurMicroCT.ipynb
+++ b/examples/MouseFemurMicroCT.ipynb
@@ -22,7 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Download data\n",
+    "# Download input image\n",
     "file_name = '901-L.nrrd'\n",
     "if not os.path.exists(file_name):\n",
     "    url = 'https://data.kitware.com/api/v1/file/5ef373379014a6d84edb66f8/download'\n",
@@ -190,24 +190,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download atlas image\n",
+    "atlas_file_name = '907-L.nrrd'\n",
+    "if not os.path.exists(atlas_file_name):\n",
+    "    url = 'https://data.kitware.com/api/v1/file/5ef375199014a6d84edb6a1f/download'\n",
+    "    urlretrieve(url, atlas_file_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "atlas = itk.imread(atlas_file_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2e231e5222e44a7fa3f92760dae2729a",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "array([[-2.4597874 , 19.208582  , 45.884567  ],\n",
-       "       [ 4.855     ,  9.24      , 48.065998  ],\n",
-       "       [-0.22125234,  0.05076638,  0.97389436]], dtype=float32)"
+       "Viewer(background=(0.6, 0.6, 0.6), cmap=['bone_Matlab'], geometries=[], gradient_opacity=1.0, opacity_gaussian…"
       ]
      },
-     "execution_count": 32,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "viewer.camera"
+    "center_of_femur_head = np.array([4.072,11.347,43.816]).reshape((1,3))\n",
+    "femur_shaft = np.array([7.713,9.107,42.649]).reshape((1,3))\n",
+    "dent = np.array([3.787,11.172,45.173]).reshape((1,3))\n",
+    "\n",
+    "opacity_gaussians = [[{'position': 0.33611111111111114,\n",
+    "   'height': 0.24545454545454548,\n",
+    "   'width': 0.22499999999999998,\n",
+    "   'xBias': 0.51,\n",
+    "   'yBias': 0.4}]]\n",
+    "view(atlas,\n",
+    "     gradient_opacity=1.0,\n",
+    "     background=(0.6,0.6,0.6),\n",
+    "     cmap='bone_Matlab',\n",
+    "     opacity_gaussians=opacity_gaussians,\n",
+    "     point_set_sizes=[10,]*3,\n",
+    "     point_set_representations=['spheres',]*3,\n",
+    "     point_sets=[center_of_femur_head, femur_shaft, dent])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5367f99f7613450a86caf8de326a4a87",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Viewer(background=(0.6, 0.6, 0.6), cmap=['bone_Matlab'], geometries=[], gradient_opacity=1.0, opacity_gaussian…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "center_of_femur_head = np.array([4.945,9.225,46.011]).reshape((1,3))\n",
+    "femur_shaft = np.array([7.424,9.474,44.711]).reshape((1,3))\n",
+    "dent = np.array([5.018,9.058,47.535]).reshape((1,3))\n",
+    "\n",
+    "view(image,\n",
+    "     gradient_opacity=1.0,\n",
+    "     background=(0.6,0.6,0.6),\n",
+    "     cmap='bone_Matlab',\n",
+    "     opacity_gaussians=opacity_gaussians,\n",
+    "     point_set_sizes=[10,]*3,\n",
+    "     point_set_representations=['spheres',]*3,\n",
+    "     point_sets=[center_of_femur_head, femur_shaft, dent])"
    ]
   },
   {
